# kes_cobot

./: .gitignore  README.md
src/color_roi_detector/: package.xml  setup.cfg  setup.py
src/color_roi_detector/color_roi_detector/: chat_gui_pyqt.py  chat_node test.py  chat_node.py  check_depth.py  color_roi_node copy 2.py  color_roi_node copy.py  color_roi_node_withoutYaml.py  find_angle  test.py  find_angle org.py  find_angle test2.py  find_angle.py  find_robot_coord.py  get_coord copy 2.py  get_coord copy 3.py  get_coord copy.py  get_coord org.py  get_coord test.py  get_coord test2.py  get_coord.py  get_robot_pose.py  img_capture.py  red_depth.py  robot_move copy.py  robot_move.py
src/color_roi_detector/config/: default.yaml
src/color_roi_detector/launch/: color_roi.launch.py
src/color_roi_detector/od_msg/: CMakeLists.txt  package.xml
src/color_roi_detector/od_msg/srv/: Srvchat.srv
src/mycobot_int/: CMakeLists.txt  package.xml
src/mycobot_interfaces/: CMakeLists.txt  package.xml
