<?xml version="1.0"?>
<package format="3">
  <name>color_roi_detector</name>
  <version>0.1.0</version>
  <description>ROI-based color detector publishing std_msgs/String.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
